fix z-index of sidebar

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -404,6 +404,7 @@ body {
   opacity: 1;
   transition: all 0.5s ease-in-out;
   font-family: "Lato";
+  z-index: 100;
 
 /*  .brand {
     font-size: 20px;
